--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,1 +1,2 @@
-de.malkusch.validation.Country.message=Der Ländercode ist ungültig.
+de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
+de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {value} Jahre sein.
