--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,2 +1,3 @@
-de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
 de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {value} Jahre sein.
+de.malkusch.validation.constraints.BIC.message=Der BIC ist ungültig.
+de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
