--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -2,3 +2,4 @@ de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {va
 de.malkusch.validation.constraints.BIC.message=Der BIC ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
 de.malkusch.validation.constraints.IBAN.message=Die IBAN Adresse ist ungültig.
+de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
