--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -3,3 +3,4 @@ de.malkusch.validation.constraints.BIC.message=Der BIC ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
 de.malkusch.validation.constraints.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
+de.malkusch.validation.constraints.upload.Image.message=Die hochgeladene Datei kann nicht als Bild geladen werden.
