--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,7 +1,7 @@
 de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {value} Jahre sein.
-de.malkusch.validation.constraints.BIC.message=Der BIC ist ungültig.
+de.malkusch.validation.constraints.banking.BIC.message=Der BIC ist ungültig.
+de.malkusch.validation.constraints.banking.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
-de.malkusch.validation.constraints.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
 de.malkusch.validation.constraints.upload.Image.message=Die hochgeladene Datei kann nicht als Bild geladen werden.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=Die hochgeladene Datei darf nicht leer sein.
