--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -2,6 +2,7 @@ de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {va
 de.malkusch.validation.constraints.banking.BIC.message=Der BIC ist ungültig.
 de.malkusch.validation.constraints.banking.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
+de.malkusch.validation.constraints.SameProperties.message=Der Wert weicht von {original} ab.
 de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
 de.malkusch.validation.constraints.upload.Image.message=Die hochgeladene Datei kann nicht als Bild geladen werden.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=Die hochgeladene Datei darf nicht leer sein.
