--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -3,6 +3,7 @@ de.malkusch.validation.constraints.banking.BIC.message=Der BIC ist ungültig.
 de.malkusch.validation.constraints.banking.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
 de.malkusch.validation.constraints.ISBN.message=Die ISBN ist ungültig.
+de.malkusch.validation.constraints.net.IPv4.message=Die Internetadresse (v4) ist ungültig.
 de.malkusch.validation.constraints.net.TLD=Die Top Level Domain ist ungültig.
 de.malkusch.validation.constraints.SameProperties.message=Der Wert weicht von {original} ab.
 de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
