renamed @SameProperties to @EqualProperties

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -6,7 +6,7 @@ de.malkusch.validation.constraints.ISBN.message=Die ISBN ist ungültig.
 de.malkusch.validation.constraints.net.Domain.message=Der Domainname ist ungültig.
 de.malkusch.validation.constraints.net.IPv4.message=Die Internetadresse (v4) ist ungültig.
 de.malkusch.validation.constraints.net.TLD=Die Top Level Domain ist ungültig.
-de.malkusch.validation.constraints.SameProperties.message=Die Felder sind nicht identisch.
+de.malkusch.validation.constraints.EqualProperties.message=Die Felder sind nicht identisch.
 de.malkusch.validation.constraints.upload.ContentType.message=Die hochgeladene Datei muss vom Inhalt "{value}" sein.
 de.malkusch.validation.constraints.upload.Image.message=Die hochgeladene Datei kann nicht als Bild geladen werden.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=Die hochgeladene Datei darf nicht leer sein.
