added bitcoin address validation

--- a/src/main/resources/ValidationMessages_de.properties
+++ b/src/main/resources/ValidationMessages_de.properties
@@ -1,5 +1,6 @@
 de.malkusch.validation.constraints.age.Age.message=Das Alter muss mindestens {value} Jahre sein.
 de.malkusch.validation.constraints.banking.BIC.message=Der BIC ist ungültig.
+de.malkusch.validation.constraints.banking.BitcoinAddress.message=Die Bitcoinadresse ist ungültig.
 de.malkusch.validation.constraints.banking.IBAN.message=Die IBAN Adresse ist ungültig.
 de.malkusch.validation.constraints.Country.message=Der Ländercode ist ungültig.
 de.malkusch.validation.constraints.ISBN.message=Die ISBN ist ungültig.
